aspire/CarvedRock-Aspire.AppHost/aspirate-output/carvedrock-webapp/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carvedrock-webapp
  labels:
    app: carvedrock-webapp
spec:
  minReadySeconds: 60
  replicas: 1
  selector:
    matchLabels:
      app: carvedrock-webapp
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: carvedrock-webapp
    spec:
      containers:
      - name: carvedrock-webapp
        image: knowyourtoolset/carvedrock-webapp:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
      terminationGracePeriodSeconds: 180
