aspire/CarvedRock-Aspire.AppHost/aspirate-output/carvedrock-webapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cr-webapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: app.carvedrock.local        
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: carvedrock-webapp
            port: 
              number: 8080
